2010-01-11 Andrew John Hughes  <ahughes@redhat.com>

	Fix issues with the CACAO build.
	* Makefile.am:
	Add new CACAO nio2 patch.
	* patches/cacao/nio2.patch:
	Implement different functions in sun.misc.Unsafe
	(copyMemory backported from OpenJDK7).
	* patches/cacao/no-strict-aliasing.patch:
	Always append -fno-strict-aliasing, even if CFLAGS
	are specified.  Otherwise, a broken CACAO results.

2010-01-11  Nobuhiro Iwamatsu <iwamatsu@nigauri.org>
	    Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-sh4-support.patch: Add zero support for Hitachi SH.
	* Makefile.am (ICEDTEA_PATCHES): Apply the above.
	* NEWS: Mention SH support.

2010-01-11  Gary Benson  <gbenson@redhat.com>

	* patches/zero/6914622.patch: New file, imports changeset
	for Sun	bug 6914622 from jdk7/hotspot-comp.
	* Makefile.am (ICEDTEA_PATCHES): Added the above.
	* contrib/checkopts/checkopts: Updated for the above.

2010-01-06  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/IcedTeaNPPlugin.h: Remove debug specific line from 
	code.

2010-01-05  Deepak Bhole <dbhole@redhat.com>

	* configure.ac: Use libxul instead of libxul-unstable for the new NP
	plugin.
	* plugin/icedtea/sun/applet/PluginAppletViewer.java
	(handleMessage): Decode URL before setting documentbase.
	(parse): Port over parser fixes from NP plugin tree.
	* plugin/icedteanp/java/sun/applet/PluginAppletViewer.java
	(handleMessage): Decode URL before setting documentbase.

2010-01-05  Gary Benson  <gbenson@redhat.com>

	* patches/zero/6909153.patch: New file.
	* patches/zero/6913869.patch: Likewise.
	* Makefile.am (ICEDTEA_PATCHES): Added the above.

2009-12-24  Deepak Bhole <dbhole@redhat.com>

	* Makefile.am: Define XP_UNIX, without which critical plugin API 
	functions don't get	exported from Mozilla API anymore.
	* plugin/icedteanp/IcedTeaNPPlugin.cc: Update to build with gecko
	1.9.1.5.
	(consume_message): Use calloc instead of malloc.
	(decode_url): Remove function. Rewritten from scratch (this time without